kubernetes/prod/apps/home-automation/mqtt/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mqtt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: emqx
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: home-assistant
        - matchLabels:
            app.kubernetes.io/name: zigbee2mqtt
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "18083"
              protocol: TCP
